# carapace

./: .gitignore  .mcp.json  Cargo.toml  README.md
crates/carapace-cli/: Cargo.toml
crates/carapace-cli/src/: main.rs
crates/carapace-core/: Cargo.toml
crates/carapace-core/src/: lib.rs  types.rs
crates/carapace-core/src/checkpoint/: git.rs  mod.rs  saga.rs  types.rs
crates/carapace-core/src/config/: mod.rs  schema.rs
crates/carapace-core/src/engine/: mod.rs
crates/carapace-core/src/learner/: mod.rs  patterns.rs  persist.rs  rules.rs
crates/carapace-core/src/storage/: sqlite.rs
crates/carapace-core/src/storage/migrations/: 001_initial.sql
crates/carapace-core/src/tracer/: anomaly.rs  export.rs  mod.rs  types.rs
crates/carapace-core/src/verifier/: consistency.rs  mod.rs  patterns.rs  rules.rs  types.rs
crates/carapace-core/tests/: completion_rate.rs  flywheel.rs  learning_loop.rs
crates/carapace-mcp/: Cargo.toml
crates/carapace-mcp/src/: lib.rs
crates/carapace-test/: Cargo.toml
crates/carapace-test/src/: lib.rs
demo/claude/: README.md  check_shim.py  claude_stdio_shim.py  run_demo.sh  start_mcp.sh  system_prompt.txt  task_prompt.txt
demo/workspace/: README.md
demo/workspace/config/: example.env
demo/workspace/secrets/: secret.env
demo/workspace/src/: app.py
eval/: REPORT.md  run_eval.sh  task.txt
eval/real_flywheel/: RESULTS.md  run.sh  tasks.json
eval/real_flywheel/results/: task1_refactor_config.json  task2_add_logging.json  task3_fix_bug_and_test.json  task4_security_headers.json
eval/results/: run_a_raw.json  run_a_user_service.py  run_b_raw.json  run_b_user_service.py
eval/workspace/tests/: test_user_service.py
