[workspace]
resolver = "2"
members = [
    "crates/carapace-core",
    "crates/carapace-mcp",
    "crates/carapace-cli",
    "crates/carapace-test",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Carapace Contributors"]
description = "Reliable execution infrastructure for AI agents"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "1.0"

# Paths
etcetera = "0.11"

# Misc
indoc = "2.0"
