[package]
name = "carapace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for Carapace"

[[bin]]
name = "carapace"
path = "src/main.rs"

[dependencies]
carapace-core = { path = "../carapace-core" }
carapace-mcp = { path = "../carapace-mcp" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
