[package]
name = "carapace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library: Verifier, Checkpoint, Tracer, ExecutionEngine"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
tracing.workspace = true
etcetera.workspace = true

[dev-dependencies]
tempfile = "3"
